# PDE-solver

./: README.md  pyproject.toml
ew-solver/: finite_difference.py
theory/: ew.ipynb
