[tool.poetry]
name = "ew-solver"
version = "0.1.0"
description = ""
authors = ["MNLubov <maxlubov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.6.0"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
